# prospect-command-center

./: .env.example  .gitignore  ACTION_CHECKLIST.md  BETA_LAUNCH_PLAN.md  CHANGELOG.md  LICENSE  Makefile  Procfile  README.md  config.example.yaml  patch-billing.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  test_v2_native.py
.github/workflows/: beta.yml  ci.yml  docker-publish.yml  post-deploy-verify.yml  railway-deploy.yml  release.yml
.planning/: ROADMAP.md  STATE.md
.planning/phases/01-production-hardening/: 01-01-PLAN.md
.planning/phases/02-onboarding-experience/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md
docker/: Dockerfile  docker-compose.beta.yml  docker-compose.prod.yml  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  SCORING.md
docs/marketing/: leadswarm-outreach-sequence.md  leadswarm-tracking-plan.md
docs/product/: leadswarm-trial-definition.md
prospect/: __init__.py  _native.py  api.py  cli.py  config.py  constants.py  dedup.py  export.py  models.py  validation.py
prospect/enrichment/: __init__.py  contacts.py  crawler.py  technology.py
prospect/scoring/: __init__.py  fit.py  notes.py  opportunity.py
prospect/scraper/: __init__.py  browser.py  locations.py  orchestrator.py  queries.py  serp.py  serpapi.py
prospect/sheets/: __init__.py  auth.py  client.py  formatter.py
prospect/web/: __init__.py  app.py  auth.py  database.py  routes.py  state.py  tasks.py
prospect/web/api/v1/: __init__.py  auth.py  billing.py  campaigns.py  config.py  dashboard.py  jobs.py  marketing.py  models.py  prospects.py  router.py  search.py  usage.py
prospect/web/frontend/: app.js  index.html  manifest.json  style.css  sw.js
prospect/web/marketing/: index.html  site.js  sw-kill.js
prospect/web/templates/: base.html  index.html  login.html  register.html  settings.html
prospect/web/templates/partials/: error.html  progress.html  results.html  sheets_success.html
prospect/web/ws/: __init__.py  jobs.py
rust/: Cargo.toml
rust/src/: export.rs  geo.rs  lib.rs  metadata.rs
scripts/: beta-setup.sh  quick-test.sh  setup.sh  test-local.sh  verify-deployment.sh
tests/: __init__.py  test_data_accuracy.py  test_enrichment.py  test_serpapi.py  test_sheets.py  test_web.py
