[package]
name = "leadswarm-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "_leadswarm_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
regex = "1"
url = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
scraper = "0.21"
